add localization, search, save news

--- a/app/src/main/res/layout/fragment_article.xml
+++ b/app/src/main/res/layout/fragment_article.xml
@@ -65,7 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_14sdp"
         android:layout_marginTop="@dimen/_24sdp"
-        android:src="@drawable/ic_save_white"
+        android:src="@drawable/ic_saved_white"
         app:altSrc="@drawable/ic_save"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -99,7 +99,6 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="Today"
             android:textColor="@color/card_background_color"
             android:textSize="@dimen/_10ssp"
             android:textStyle="bold" />
@@ -113,7 +112,6 @@
         android:layout_marginHorizontal="@dimen/_15sdp"
         android:layout_marginTop="@dimen/_5sdp"
         android:layout_marginBottom="@dimen/_20sdp"
-        android:text="The latest situation in the presidential election"
         android:textColor="@color/card_background_color"
         android:fontFamily="@font/sf_pro_text"
         android:textSize="@dimen/_15ssp"
@@ -136,7 +134,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/_15sdp"
             android:layout_marginVertical="@dimen/_13sdp"
-            android:text="Results"
+            android:text="@string/results"
             android:textColor="@color/title_text_color"
             android:textSize="@dimen/_15ssp"
             android:textStyle="bold"
@@ -149,7 +147,6 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="@dimen/_13sdp"
             android:paddingHorizontal="@dimen/_15sdp"
-            android:text="News Data"
             android:textColor="@color/mini_text_color"
             android:textSize="@dimen/_13ssp"
             app:layout_constraintLeft_toLeftOf="parent"
