--- a/app/src/main/res/layout/fragment_language.xml
+++ b/app/src/main/res/layout/fragment_language.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_20sdp"
         android:fontFamily="@font/sf_pro_text"
-        android:text="Language"
+        android:text="@string/language"
         android:textColor="@color/title_text_color"
         android:textSize="@dimen/_18ssp"
         android:textStyle="bold"
@@ -66,7 +66,7 @@
             android:layout_gravity="start|center"
             android:layout_marginStart="@dimen/_15sdp"
             android:fontFamily="@font/sf_pro_text"
-            android:text="English"
+            android:text="@string/english"
             android:textColor="@color/card_text_color"
             android:textSize="@dimen/_12ssp"
             android:textStyle="bold" />
@@ -105,7 +105,7 @@
             android:layout_gravity="start|center"
             android:layout_marginStart="@dimen/_15sdp"
             android:fontFamily="@font/sf_pro_text"
-            android:text="Turkish"
+            android:text="@string/turkish"
             android:textColor="@color/card_text_color"
             android:textSize="@dimen/_12ssp"
             android:textStyle="bold" />
@@ -144,7 +144,7 @@
             android:layout_gravity="start|center"
             android:layout_marginStart="@dimen/_15sdp"
             android:fontFamily="@font/sf_pro_text"
-            android:text="German"
+            android:text="@string/german"
             android:textColor="@color/card_text_color"
             android:textSize="@dimen/_12ssp"
             android:textStyle="bold" />
@@ -183,7 +183,7 @@
             android:layout_gravity="start|center"
             android:layout_marginLeft="@dimen/_15sdp"
             android:fontFamily="@font/sf_pro_text"
-            android:text="Spanish"
+            android:text="@string/russian"
             android:textColor="@color/card_text_color"
             android:textSize="@dimen/_12ssp"
             android:textStyle="bold" />
