--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_20sdp"
         android:fontFamily="@font/sf_pro_text"
-        android:text="Categories"
+        android:text="@string/categories"
         android:textColor="@color/title_text_color"
         android:textSize="@dimen/_18ssp"
         android:textStyle="bold"
@@ -74,7 +74,7 @@
                     android:layout_gravity="center"
                     android:fontFamily="@font/sf_pro_text"
                     android:gravity="center"
-                    android:text="🏈   Sports"
+                    android:text="@string/sports"
                     android:textColor="@color/card_text_color"
                     android:textSize="@dimen/_14sdp"
                     android:textStyle="bold" />
@@ -98,7 +98,7 @@
                     android:layout_gravity="center"
                     android:fontFamily="@font/sf_pro_text"
                     android:gravity="center"
-                    android:text="🌞   Life"
+                    android:text="@string/life"
                     android:textColor="@color/card_text_color"
                     android:textSize="@dimen/_14sdp"
                     android:textStyle="bold" />
@@ -122,7 +122,7 @@
                     android:layout_gravity="center"
                     android:fontFamily="@font/sf_pro_text"
                     android:gravity="center"
-                    android:text="🐻   Animals"
+                    android:text="@string/animals"
                     android:textColor="@color/card_text_color"
                     android:textSize="@dimen/_14sdp"
                     android:textStyle="bold" />
@@ -146,7 +146,7 @@
                     android:layout_gravity="center"
                     android:fontFamily="@font/sf_pro_text"
                     android:gravity="center"
-                    android:text="🍔   Food"
+                    android:text="@string/food"
                     android:textColor="@color/card_text_color"
                     android:textSize="@dimen/_14sdp"
                     android:textStyle="bold" />
@@ -170,7 +170,7 @@
                     android:layout_gravity="center"
                     android:fontFamily="@font/sf_pro_text"
                     android:gravity="center"
-                    android:text="📜   History"
+                    android:text="@string/history"
                     android:textColor="@color/card_text_color"
                     android:textSize="@dimen/_14sdp"
                     android:textStyle="bold" />
@@ -202,7 +202,7 @@
                     android:layout_gravity="center"
                     android:fontFamily="@font/sf_pro_text"
                     android:gravity="center"
-                    android:text="⚖️   Politics"
+                    android:text="@string/politics"
                     android:textColor="@color/card_text_color"
                     android:textSize="@dimen/_14sdp"
                     android:textStyle="bold" />
@@ -226,7 +226,7 @@
                     android:layout_gravity="center"
                     android:fontFamily="@font/sf_pro_text"
                     android:gravity="center"
-                    android:text="🎮   Gaming"
+                    android:text="@string/gaming"
                     android:textColor="@color/card_text_color"
                     android:textSize="@dimen/_14sdp"
                     android:textStyle="bold" />
@@ -250,7 +250,7 @@
                     android:layout_gravity="center"
                     android:fontFamily="@font/sf_pro_text"
                     android:gravity="center"
-                    android:text="🌴   Nature"
+                    android:text="@string/nature"
                     android:textColor="@color/card_text_color"
                     android:textSize="@dimen/_14sdp"
                     android:textStyle="bold" />
@@ -274,7 +274,7 @@
                     android:layout_gravity="center"
                     android:fontFamily="@font/sf_pro_text"
                     android:gravity="center"
-                    android:text="🎨   Art"
+                    android:text="@string/art"
                     android:textColor="@color/card_text_color"
                     android:textSize="@dimen/_14sdp"
                     android:textStyle="bold" />
@@ -298,7 +298,7 @@
                     android:layout_gravity="center"
                     android:fontFamily="@font/sf_pro_text"
                     android:gravity="center"
-                    android:text="👗   Fashion"
+                    android:text="@string/fashion"
                     android:textColor="@color/card_text_color"
                     android:textSize="@dimen/_14sdp"
                     android:textStyle="bold" />
@@ -330,7 +330,7 @@
             android:layout_gravity="center"
             android:fontFamily="@font/sf_pro_text"
             android:gravity="center"
-            android:text="Change"
+            android:text="@string/change"
             android:textColor="@color/card_background_color"
             android:textSize="@dimen/_13sdp"
             android:textStyle="bold" />
