--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,7 +27,7 @@
                 android:layout_marginTop="@dimen/_20sdp"
                 android:layout_marginRight="@dimen/_16sdp"
                 android:fontFamily="@font/sf_pro_text"
-                android:text="Browse"
+                android:text="@string/browse"
                 android:textColor="@color/title_text_color"
                 android:textSize="@dimen/_18ssp"
                 android:textStyle="bold"
@@ -42,7 +42,7 @@
                 android:layout_marginTop="@dimen/_8sdp"
                 android:layout_marginRight="@dimen/_16sdp"
                 android:fontFamily="@font/sf_pro_text"
-                android:text="Discover things of this world"
+                android:text="@string/home_des"
                 android:textColor="@color/mini_text_color"
                 android:textSize="@dimen/_12ssp"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -77,7 +77,7 @@
                     android:layout_marginStart="@dimen/_15sdp"
                     android:background="@null"
                     android:ellipsize="end"
-                    android:hint="Search"
+                    android:hint="@string/search"
                     android:imeOptions="actionSearch"
                     android:inputType="text"
                     android:maxLines="1"
@@ -139,7 +139,7 @@
                         android:layout_marginTop="@dimen/_50sdp"
                         android:fontFamily="@font/sf_pro_text"
                         android:gravity="center"
-                        android:text="no internet connection"
+                        android:text="@string/no_internet"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_15sdp"
                         android:textStyle="bold"
