--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swipe"
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ui.after.BookmarkFragment">
+    tools:context=".ui.after.SearchFragment">
 
     <me.didik.component.StickyNestedScrollView
         android:id="@+id/id"
@@ -21,32 +21,38 @@
 
             <TextView
                 android:id="@+id/title"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_16sdp"
                 android:layout_marginTop="@dimen/_20sdp"
-                android:layout_marginRight="@dimen/_16sdp"
                 android:fontFamily="@font/sf_pro_text"
-                android:text="@string/rec_for_you"
+                android:text="@string/search"
                 android:textColor="@color/title_text_color"
                 android:textSize="@dimen/_18ssp"
                 android:textStyle="bold"
                 app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/topic_title1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_16sdp"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:layout_marginRight="@dimen/_16sdp"
-                android:fontFamily="@font/sf_pro_text"
-                android:text="@string/recommended_news"
-                android:textColor="@color/mini_text_color"
-                android:textSize="@dimen/_12ssp"
+            <androidx.cardview.widget.CardView
+                app:cardBackgroundColor="@color/white"
+                android:id="@+id/back_card"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:foreground="?selectableItemBackground"
+                app:cardCornerRadius="@dimen/_15sdp"
+                app:cardElevation="0dp"
+                app:layout_constraintBottom_toBottomOf="@id/title"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/title" />
+                app:layout_constraintTop_toTopOf="@id/title">
+
+                <ImageView
+                    android:layout_gravity="center"
+                    android:id="@+id/left"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_left" />
+            </androidx.cardview.widget.CardView>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:paddingVertical="@dimen/_10sdp"
@@ -55,7 +61,7 @@
                 android:layout_marginTop="@dimen/_14sdp"
                 android:id="@+id/search_constraint"
                 app:layout_constraintBottom_toTopOf="@id/id1"
-                app:layout_constraintTop_toBottomOf="@id/topic_title1"
+                app:layout_constraintTop_toBottomOf="@id/title"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -195,4 +201,4 @@
 
     </me.didik.component.StickyNestedScrollView>
 
-</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+</LinearLayout>
