--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -21,6 +21,6 @@
         android:textSize="@dimen/_18ssp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nuntium"/>
+        android:text="@string/nuntium"/>
 
 </LinearLayout>
